--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -29,11 +29,11 @@
       "metadata": {
         "id": "UQTVkqUWJk31",
         "colab_type": "code",
+        "outputId": "aa93c403-abdc-4c6c-89e6-6e0abf0524f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "aa93c403-abdc-4c6c-89e6-6e0abf0524f7"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -42,7 +42,7 @@
         "\n",
         "print(\"Hello World\")"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "u3IsYz8gJwOA",
         "colab_type": "code",
+        "outputId": "897da597-d9e4-4bdc-cfe4-3408df668116",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "897da597-d9e4-4bdc-cfe4-3408df668116"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -71,7 +71,7 @@
         "\n",
         "print(\"My name is: \" + myname)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,11 +87,11 @@
       "metadata": {
         "id": "UA7Qqeo-KR4T",
         "colab_type": "code",
+        "outputId": "f26b5910-1551-4ce8-85ae-cca88184b6e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "f26b5910-1551-4ce8-85ae-cca88184b6e0"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -112,7 +112,7 @@
         "print(one*two)\n",
         "print(one/two)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,11 +128,11 @@
       "metadata": {
         "id": "e9cRxqmoK53o",
         "colab_type": "code",
+        "outputId": "ed4107da-e2bf-434e-bd2d-37927be5475f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "ed4107da-e2bf-434e-bd2d-37927be5475f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -147,7 +147,7 @@
         "else:\n",
         "  print(\"This number is Zero!\")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,11 +163,11 @@
       "metadata": {
         "id": "X2vBTWpLLbxN",
         "colab_type": "code",
+        "outputId": "207fedbf-a121-4e6d-f973-35724f87e9d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 966
-        },
-        "outputId": "a7f5f268-00ca-4c0f-bd7b-fc391ebc1b7d"
+          "height": 121
+        }
       },
       "cell_type": "code",
       "source": [
@@ -182,30 +182,19 @@
         "  else:\n",
         "    print(\"This number is Zero!\")"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    729\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 730\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    731\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    394\u001b[0m         \"\"\"\n\u001b[0;32m--> 395\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    396\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-4b62c913391c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mnumber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter a number: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"This is a positive number!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 705\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    706\u001b[0m         )\n\u001b[1;32m    707\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    733\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    734\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 735\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    736\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    737\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 0\n",
+            "This number is Zero!\n",
+            "Enter a number: -5\n",
+            "This is a negative number!\n",
+            "Enter a number: 5\n",
+            "This is a positive number!\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -213,11 +202,11 @@
       "metadata": {
         "id": "x7adaJ-eOP9O",
         "colab_type": "code",
+        "outputId": "c9159f82-f970-4429-d9ba-7d9aa615e04e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "c9159f82-f970-4429-d9ba-7d9aa615e04e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -230,7 +219,7 @@
         "elif (number != 10):\n",
         "  print(\"This number is not 10\")"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,11 +235,11 @@
       "metadata": {
         "id": "bviEWtn4MgLr",
         "colab_type": "code",
+        "outputId": "02018bd9-25e0-4b80-d979-fdbf9bf0263e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        },
-        "outputId": "02018bd9-25e0-4b80-d979-fdbf9bf0263e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -271,7 +260,7 @@
         "print(False or True)\n",
         "print(False or False)\n"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,16 +302,103 @@
     },
     {
       "metadata": {
-        "id": "a9aqY8nWPvBO",
+        "id": "4ErBaDX-U6KY",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "# Bubble chatbot"
+        "# Bubble chatbot continued\n",
+        "\n",
+        "# Excercise Part 1\n",
+        "# Create an if statement that will determine if the number entered is\n",
+        "# between 0 and 100. Print \"The number is bewteen  and 100 if it is\". \n",
+        "# Print \"The number is not between 0 and 100\" if it is not.\n",
+        "\n",
+        "# your code here\n",
+        "\n",
+        "# Excercise Part 2\n",
+        "# Place your answer to Part 1 in a for loop so that a user can enter \n",
+        "# 5 numbers and determine if they lie between 0 and 100.\n",
+        "\n",
+        "# Excercise Part 3\n",
+        "# Change your answer to Part 1 and 2 so that a user can enter 10 \n",
+        "# numbers and calculate a mark out of 50.\n",
+        "# To calculate a mark out of 50 remember that mark = (number/50) * 100\n",
+        "# Print this mark"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "VhHGTbqLZLZ-",
+        "colab_type": "code",
+        "outputId": "5cdcc057-9f77-4617-c085-f7c38fdbe3d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 382
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "# Bubble chatbot continued\n",
+        "\n",
+        "# Part 1 answer:\n",
+        "print(\"====Part 1====\")\n",
+        "\n",
+        "number = int(input(\"number: \"))\n",
+        "if (number >=0 and number <= 100):\n",
+        "  print(\"The number lies bewteen 0 and 100\")\n",
+        "else:\n",
+        "  print(\"The number does not lie between 0 and 100\")\n",
+        "\n",
+        "# Part 2 answer\n",
+        "print(\"====Part 2====\")\n",
+        "for i in range(5):\n",
+        "  number = int(input(\"number: \"))\n",
+        "  if (number >=0 and number <= 100):\n",
+        "    print(\"The number lies bewteen 0 and 100\")\n",
+        "  else:\n",
+        "    print(\"The number does not lie between 0 and 100\")\n",
+        "  \n",
+        "# Part 3 answer\n",
+        "print(\"====Part 3====\")\n",
+        "for i in range(3):\n",
+        "  number = int(input(\"number: \"))\n",
+        "  print((number/50)*100)\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "====Part 1====\n",
+            "number: 6\n",
+            "The number lies bewteen 0 and 100\n",
+            "====Part 2====\n",
+            "number: 5\n",
+            "The number lies bewteen 0 and 100\n",
+            "number: 0\n",
+            "The number lies bewteen 0 and 100\n",
+            "number: 10000\n",
+            "The number does not lie between 0 and 100\n",
+            "number: 654\n",
+            "The number does not lie between 0 and 100\n",
+            "number: 54\n",
+            "The number lies bewteen 0 and 100\n",
+            "====Part 3====\n",
+            "number: 50\n",
+            "100.0\n",
+            "number: 60\n",
+            "120.0\n",
+            "number: 1\n",
+            "2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
